Youtube video overflow prevented

--- a/assets/systron/scss/_global.scss
+++ b/assets/systron/scss/_global.scss
@@ -384,3 +384,21 @@ img::-moz-selection {
 .is-hidden {
   display: none !important;
 }
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin-bottom: 20px;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+  border: 0;
+}
